--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./styles.css"> 
         <title>Landing Page</title>
     </head>
 
     <body>
-
+        <div class="header">
+            <a class="logo">Header Logo</a>
+            <a>header link one</a>
+            <a>header link two</a>
+            <a>header link three</a>
+        </div>
     </body>
 </html>
