--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
             <a>header link two</a>
             <a>header link three</a>
         </div>
+
+        <div class="intro">
+            <a class="intro-title">This website is awesome</a>
+            <a class="intro-desc">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</a>
+            <button class="sign-up">Sign up</button>
+
+        </div>
+
     </body>
 </html>
