feat: header established

--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     </head>
 
     <body>
-        <div class="header">
-            <a class="logo">Header Logo</a>
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
+        <div class="body">
+            <div class="header">
+                <a class="logo">Header Logo</a>
+                <div class="links">
+                    <a>header link one</a>
+                    <a>header link two</a>
+                    <a>header link three</a>
+                </div>
+            </div>
+
+            <div class="intro">
+                <a class="intro-title">This website is awesome</a>
+                <a class="intro-desc">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</a>
+                <button class="sign-up">Sign up</button>
+                <img src="./images/placeholder.jpg" alt="this is a placeholder for an image" />
+            </div>
         </div>
 
-        <div class="intro">
-            <a class="intro-title">This website is awesome</a>
-            <a class="intro-desc">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</a>
-            <button class="sign-up">Sign up</button>
-
-        </div>
 
     </body>
 </html>
