feat: intro page styles added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             </div>
 
             <div class="intro">
-                <a class="intro-title">This website is awesome</a>
-                <a class="intro-desc">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</a>
-                <button class="sign-up">Sign up</button>
-                <img src="./images/placeholder.jpg" alt="this is a placeholder for an image" />
+                    <div class="intro-text">
+                    <a class="intro-title">This website is awesome</a>
+                    <a class="intro-desc">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</a>
+                    <button class="sign-up">Sign up</button>
+                </div>
+                <img class="placeholder" src="./images/placeholder.jpg" alt="this is a placeholder for an image" />
             </div>
         </div>
 
