feat: cards implemented in css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,41 @@
                 </div>
                 <img class="placeholder" src="./images/placeholder.jpg" alt="this is a placeholder for an image" />
             </div>
+
+            <div class="info">
+                <a class="info-title">Some Random Information</a>
+                <div class="cards">
+                    
+                    <div class="card">
+                        <div class="square"></div>
+                        <a class="caption">this is some subtext under an illustration or image</a>
+                    </div>
+
+                    <div class="card">
+                        <div class="square"></div>
+                        <a class="caption">this is some subtext under an illustration or image</a>
+                    </div>
+
+                    <div class="card">
+                        <div class="square"></div>
+                        <a class="caption">this is some subtext under an illustration or image</a>
+                    </div>
+
+                    <div class="card">
+                        <div class="square"></div>
+                        <a class="caption">this is some subtext under an illustration or image</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="quote">
+
+            </div>
+
+            <div class="advert">
+
+            </div>
+
         </div>
 
 
