feat: quote section style added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="info">
                 <a class="info-title">Some Random Information</a>
                 <div class="cards">
-                    
+
                     <div class="card">
                         <div class="square"></div>
                         <a class="caption">this is some subtext under an illustration or image</a>
@@ -53,7 +53,12 @@
             </div>
 
             <div class="quote">
-
+                <div class="quote-container">
+                    <div class="text-container">
+                        <a class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who Knows? All I know is that it looks nice.</a>
+                        <a class="author">-Thor, God of Thunder</a>
+                    </div>
+                </div>
             </div>
 
             <div class="advert">
