feat: advert css completed

--- a/index.html
+++ b/index.html
@@ -62,10 +62,18 @@
             </div>
 
             <div class="advert">
-
+                <div class="boxed">
+                    <div class="box2">
+                        <a class="call">Call to action! It's time!</a>
+                        <a class="advert-desc">Sign up for our product by clicking that button right over there!</a>
+                    </div>
+                    <button class="sign-up">Sign up</button>
+                </div>
             </div>
 
         </div>
+
+        
 
 
     </body>
