feat: footer added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
 
         </div>
 
-        
+        <div class="footer">
+            <a class="footer-end">The Odin Project</a>
+            
+
+        </div>
 
 
     </body>
